software-layer/k8s/apps/talos3203/plex/resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: plex
  name: plex
spec:
  rules:
    - host: plex.local.bcbrookman.com
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: plex.bcbrookman.com
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  name: http
            path: /
            pathType: Prefix
